<resources>
    <string name="app_name">SpaceX</string>
    <string name="company_info">%s was founded by %s in %s. It has now %s employees, %s launch sites,
        and is valued at USD %s.</string>
    <string name="company_title">COMPANY</string>

    <!-- Launches -->
    <string name="launches_title">LAUNCHES</string>
    <string name="launch_item_mission_title">Mission</string>
    <string name="launch_item_date_title">Date/Time</string>
    <string name="launch_item_rocket_title">Rocket</string>
    <string name="launch_item_days_title">Days</string>

    <!-- Launch Days -->
    <string name="launch_today">Today</string>
    <string name="launch_since">since</string>
    <string name="launch_from">from</string>
    <string name="launch_day">%sd %s launch </string>

    <!-- Toolbar -->
    <string name="toolbar_filter">Filter</string>

    <!-- Filter Dialog -->
    <string name="filter_title">Choose Media</string>
    <string name="wiki">Wiki</string>
    <string name="video">Video</string>
    <string name="article">Article</string>
</resources>