<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="evans.dale.spacex.home.LaunchVM" />

        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:padding="16dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:setImageId="@{viewModel.successIcon}"
            android:visibility="@{viewModel.successIcon == null ? View.GONE : View.VISIBLE}"/>

        <ImageView
            android:id="@+id/patch_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            imageUrl="@{viewModel.patchImageURL}" />

        <TextView
            android:id="@+id/mission_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/launch_item_mission_title"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/patch_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/mission_title"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{viewModel.missionName}"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/patch_image"
            app:layout_constraintTop_toBottomOf="@id/mission_title"
            android:text="@string/launch_item_date_title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/date_title"
            app:layout_constraintTop_toBottomOf="@id/mission_title"
            android:text="@{viewModel.launchDayTime}"
            android:layout_margin="8dp"/>


        <TextView
            android:id="@+id/rocket_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/patch_image"
            app:layout_constraintTop_toBottomOf="@id/date_title"
            android:text="@string/launch_item_rocket_title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/rocket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/rocket_title"
            app:layout_constraintTop_toBottomOf="@id/date_title"
            android:text="@{viewModel.rocketInfo}"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/days_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/patch_image"
            app:layout_constraintTop_toBottomOf="@id/rocket_title"
            android:text="@string/launch_item_days_title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/days_title"
            app:layout_constraintTop_toBottomOf="@id/rocket_title"
            android:text="@{viewModel.daysToLaunch}"
            android:layout_margin="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

